power: bail out early if the GnomeRRScreen could not be created

This may happen in the case gnome-shell is not running when g-s-d starts
up. This fixes a crash in such situation, as priv->rr_screen was assumed
to exist soon after.

https://bugzilla.gnome.org/show_bug.cgi?id=719974